/*
 * $Id: ChangeLog,v 1.4545 2005/10/31 13:37:02 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2005-10-31 15:10 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/config/global.cf
     * removed dbfdbt from HB_DB_DRIVERS list as per Przemyslaw request

2005-10-31 14:35 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/config/global.cf
     ! dbfdbt was missing from HB_DB_DRIVERS list

2005-10-31 13:54 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
    - remove repeated declaration of hb_execFromArray()

  * xharbour/include/hbcomp.h
    - remove repeated declarations of hb_compSequenceBegin() and
      hb_compSequenceEnd()

  * xharbour/include/hbstack.h
    % remove HB_THREAD_STUB form some hb_stack*() macros.
      it's time to begin benefit from exclusive to HVM use of stack
      and API macros so we can change them without afford about 3-rd
      party code. Now in MT mode pure .prg code is executed over 10%
      faster.

  * xharbour/include/hbvm.h
  * xharbour/source/vm/hvm.c
    * changed declaration of hb_vm_pFunDbgEntry to make some C++
      compiler happy ;-) - it should fix OpwnWatcom build.

  * xharbour/source/vm/itemapi.c
    * minor cleanup for compilers which does not allow undefined
      macros in #if comparison

2005-10-31 03:41 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbapi.h
    * Important correction to HB_STRING_ALLOC()
  * include/hbapi.h
  * source/vm/proc.c
    * Exported hb_procinfo()

2005-10-31 01:06 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/fastitem.c
    * Minor revision

2005-10-31 09:20 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     + added documentation from clipper ng to ::Invalidate(), ::RefreshAll(),
       ::RefreshCurrent() methods
