@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4545 2005/10/31 13:37:02 mauriliolongo Exp $
+ * $Id: ChangeLog,v 1.4546 2005/10/31 14:08:55 mauriliolongo Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+
+2005-10-31 23:55 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
+  * contrib/gtwvw/gtwvw.c
+    * wvw_pbcreate() now support bitmap on buttons.
+    ! wvw_pbsetfocus() and wvw_cbsetfocus() was always returning .f., fixed.
+  * contrib/gtwvw/doc/whatsnew.txt
+    * updated
 
 2005-10-31 15:10 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
    * source/config/global.cf
